@startuml
title WarmHouse управление датчиком диаграмма кода

top to bottom direction

!includeurl https://raw.githubusercontent.com/RicardoNiepel/C4-PlantUML/master/C4_Component.puml

class User {
  -userId: Long
  -name: String
  -email: String
  -role: String
}

class House {
  -houseId: Long
  -userId: Long
  -name: String
  -address: String
  -createdAt: OffsetDateTime
}

class Device {
  -deviceId: Long
  -houseId: Long
  -deviceTypeId: Long
  -name: String
  -status: Boolean
  -createdAt: OffsetDateTime
}

class TelemetryData {
  -telemetryId: Long
  -deviceId: Long
  -unitId: Long
  -value: Double
  -timestamp: OffsetDateTime
}

User "1" -- "0..*" House : owns
House "1" -- "0..*" Device : contains
Device "1" -- "0..*" TelemetryData : produces

@enduml